--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>hello, this is creative tech</h1>
-    <img src="Image1.png">
+    <img src="Image1.png" width="500" height="600">
 </body>
 </html>
