--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>hello, this is creative tech</h1>
-    <img src="Image1.png" width="500" height="600">
+    <h2>Assignment # 1</h2>
+    <img src="Image1.png" width="1386" height="346">
+    <img src="Image2.png" width="1471" height="602">
 </body>
 </html>
