Changed file names
In order to direct to the intro and dont jump it, I reassigned the name index.html to that file and the index is now home.html

--- a/Assignment_1/about.html
+++ b/Assignment_1/about.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <a href="index.html">
+    <a href="home.html">
       <img src="img/Gust_Logo_2021.png" alt="TAM-3" width="312" height="312">
     </a>
     <nav>
