--- a/Assignment_1/home.html
+++ b/Assignment_1/home.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <link href="indexstylecopy.css" rel="stylesheet">
+  <link href="homestyle.css" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <a href="index.html">
+    <a href="home.html">
       <img src="img/Gust_Logo_2021.png" alt="TAM-3" width="312" height="312">
     </a>
     <nav>
@@ -21,7 +21,6 @@
 
   <main>
     <iframe id="pageFrame" width=80% height=100% src=""></iframe>
-
   </main>
 
   <footer>
@@ -53,12 +52,6 @@
     console.log('here' , i ,j , b.style.left , b.style.top);
     b.style.left = i+'px';
     b.style.top = j + "px";
-
-    setTimeout(function(){
-        window.location.href = 'particles.html';
-    }, 0);
-    
-
 }
 
   </script>
