--- a/Assignment_1/submit.html
+++ b/Assignment_1/submit.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <a href="index.html">
+    <a href="home.html">
       <img src="img/Gust_Logo_2021.png" alt="TAM-3" width="312" height="312">
     </a>
     <nav>
