--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -22,6 +22,6 @@
 
   <script type="text/javascript">
     setTimeout(function(){
-        window.location.href = 'index.html';
+        window.location.href = 'home.html';
     }, 6000);
 </script>
