--- a/Opening/index.html
+++ b/Opening/index.html
@@ -12,5 +12,6 @@
     <img src="Image1.png" width="1536" height="399">
     <img src="Image2.png" width="1537" height="604">
     <img src="Image3.png" width="1537" height="577">
+    <img src="FinalDiagram.png" width="1537" height="577">
 </body>
 </html>
