Updated with Assignment # 2
Added Documentation for Assignment # 2

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <img src="Image1.png" width="1536" height="399">
     <img src="Image2.png" width="1537" height="604">
     <img src="Image3.png" width="1537" height="577">
+    <h2>Assignment # 2</h2>
+    <iframe width="1280" height="720"
+    src="https://youtu.be/SLhbQhovbug">
+    </iframe>
 </body>
 </html>
