Updated video and link
Did some corrections to the video and reuploaded it.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="Image3.png" width="1537" height="577">
     <h2>Assignment # 2</h2>
     <iframe width="1280" height="720"
-    src="https://youtu.be/SLhbQhovbug">
+    src="https://youtu.be/E6z6XaJUnlk">
     </iframe>
 </body>
 </html>
