Starting to rearrange for final deliver

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <title>Fall 2021 Creative Tech 3</title>
 </head>
 <body>
-    <h1>hello, this is creative tech</h1>
-    <h2>Assignment # 1</h2>
-    <img src="Image1.png" width="1536" height="399">
-    <img src="Image2.png" width="1537" height="604">
-    <img src="Image3.png" width="1537" height="577">
-    <h2>Assignment # 2</h2>
-    <iframe width="1280" height="720"
-    src="https://youtu.be/E6z6XaJUnlk">
-    </iframe>
+    <h1>Creative Technology 3</h1>
+    <h2>Mario Santanilla</h2>
+    <h3>Assignment # 1</h3>
+    <h3>Assignment # 2</h3>
+    <h3>Assignment # 3</h3>
+    <h3>Assignment # 4</h3>
+
+    <iframe width="1280" height="720" src="https://youtu.be/E6z6XaJUnlk"></iframe>
 </body>
 </html>
